Smaller header, lowercase title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img src="logo.svg" alt="Froggy logo" class="logo">
-        <h1>Froggy.org</h1>
+        <h1>froggy.org</h1>
         <p class="tagline">Welcome to Jennifer Kay's corner of the web</p>
     </header>
 
