--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Froggy.org - Jennifer Kay</title>
-    <link rel="stylesheet" href="style.css?v=3">
+    <link rel="stylesheet" href="style.css?v=9">
 </head>
 <body>
     <header>
@@ -16,13 +16,12 @@
     <nav>
         <a href="#about">About</a>
         <a href="#teaching">Teaching</a>
-        <a href="#artwork">Artwork</a>
-        <a href="#brad">Brad</a>
+        <a href="brad.html">Brad's Art</a>
     </nav>
 
     <main>
         <section id="about">
-            <h2>About Me</h2>
+            <h2>&#x1F44B; About Me</h2>
             <div class="about-content">
                 <img src="jennifer.jpg" alt="Jennifer Kay" class="profile-photo">
                 <p>Hi! I'm Jennifer Kay, a middle school teacher with a passion for learning, creativity, and of course, frogs! This site is my little space to share the things I love.</p>
@@ -30,21 +29,13 @@
         </section>
 
         <section id="teaching">
-            <h2>Teaching</h2>
+            <h2>&#x1F4DA; Teaching</h2>
             <p>As a middle school teacher, I get to inspire young minds every day. There's nothing quite like seeing that spark of understanding in a student's eyes!</p>
         </section>
 
-        <section id="artwork">
-            <h2>Artwork</h2>
-            <p>Art has always been a big part of my life. Here you'll find a collection of pieces that inspire me and creations from my own journey.</p>
-            <div class="gallery">
-                <div class="placeholder">Gallery coming soon</div>
-            </div>
-        </section>
-
         <section id="brad">
-            <h2>Brad</h2>
-            <p>My wonderful husband Brad is my partner in everything. Together we share adventures, hobbies, and a love for life.</p>
+            <h2>&#x1F3A8; Brad's Art</h2>
+            <p>My wonderful husband Brad is an artist. Check out his <a href="brad.html">artwork gallery</a>.</p>
         </section>
     </main>
 
