Style improvements, footer fix, teaching frog graphic

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Froggy.org - Jennifer Kay</title>
-    <link rel="stylesheet" href="style.css?v=31">
+    <link rel="stylesheet" href="style.css?v=40">
 </head>
 <body>
-    <div class="version">v31</div>
+    <div class="version">v40</div>
     <div class="header-spacer"></div>
     <header>
         <img src="logo.svg" alt="Froggy logo" class="logo">
@@ -30,6 +30,7 @@
 
         <section id="teaching">
             <h2>&#x1F4DA; Teaching</h2>
+            <img src="teaching.svg" alt="Frog teacher and student" class="teaching-graphic">
             <p>As a middle school teacher, I get to inspire young minds every day. There's nothing quite like seeing that spark of understanding in a student's eyes!</p>
         </section>
 
@@ -40,7 +41,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2026 Jennifer Kay | Froggy.org</p>
+        <p>&copy; 2026 Jennifer Kay | froggy.org</p>
     </footer>
 <script>
 let isHorizontal = false;
