--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Froggy.org - Jennifer Kay</title>
-    <link rel="stylesheet" href="style.css?v=42">
+    <link rel="stylesheet" href="style.css?v=51">
 </head>
 <body>
-    <div class="version">v42</div>
+    <div class="version">v51</div>
     <div class="header-spacer"></div>
     <header>
         <img src="logo.svg" alt="Froggy logo" class="logo">
@@ -23,18 +23,19 @@
 
     <main>
         <section id="about">
-            <h2>&#x1F44B; About Me</h2>
             <img src="jennifer.jpg" alt="Jennifer Kay" class="profile-photo">
+            <h2>&#x1F44B; About Me</h2>
             <p>Hi! I'm Jennifer Kay, a middle school teacher with a passion for learning, creativity, and of course, frogs! This site is my little space to share the things I love.</p>
         </section>
 
         <section id="teaching">
-            <h2>&#x1F4DA; Teaching</h2>
             <img src="teaching.svg" alt="Frog teacher and student" class="teaching-graphic">
+            <h2>&#x1F4DA; Teaching</h2>
             <p>As a middle school teacher, I get to inspire young minds every day. There's nothing quite like seeing that spark of understanding in a student's eyes!</p>
         </section>
 
         <section id="brad">
+            <img src="brad.jpg" alt="Brad Kay" class="brad-photo">
             <h2>&#x1F3A8; Brad's Art</h2>
             <p>My wonderful husband Brad is an artist. Check out his <a href="brad.html">artwork gallery</a>.</p>
         </section>
@@ -43,7 +44,8 @@
     <footer>
         <p>&copy; 2026 Jennifer Kay | froggy.org</p>
     </footer>
-<script>
+
+    <script>
 let isHorizontal = false;
 window.addEventListener('scroll', () => {
     const scrollY = window.scrollY;
