Fix Brad page short header title

--- a/brad.html
+++ b/brad.html
@@ -15,7 +15,7 @@
 
     <header class="header-small">
         <a href="index.html"><img src="logo.svg" alt="Froggy logo" class="logo-small"></a>
-        <h1>Brad's Art</h1>
+        <h1>Brad's Art -- froggy.org</h1>
     </header>
 
     <nav>
