Add artistic paint splatter header for Brad's Art page

--- a/brad.html
+++ b/brad.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brad's Art - froggy.org</title>
-    <link rel="stylesheet" href="style.css?v=59">
+    <link rel="stylesheet" href="style.css?v=60">
 </head>
 <body>
-    <header class="header-large">
+    <header class="header-large art-theme">
         <a href="index.html"><img src="logo.svg" alt="Froggy logo" class="logo"></a>
         <h1>Brad's Art</h1>
         <p class="tagline">Artwork by Brad Kay</p>
