Fixed footer, add artwork placeholders

--- a/brad.html
+++ b/brad.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brad's Art - froggy.org</title>
-    <link rel="stylesheet" href="style.css?v=62">
+    <link rel="stylesheet" href="style.css?v=63">
 </head>
 <body>
     <header class="header-large art-theme subpage">
@@ -30,7 +30,12 @@
             <h2>Gallery</h2>
             <p>A collection of Brad's artwork.</p>
             <div class="gallery">
-                <div class="placeholder">Artwork coming soon</div>
+                <div class="placeholder">Painting 1</div>
+                <div class="placeholder">Painting 2</div>
+                <div class="placeholder">Painting 3</div>
+                <div class="placeholder">Sculpture 1</div>
+                <div class="placeholder">Drawing 1</div>
+                <div class="placeholder">Drawing 2</div>
             </div>
         </section>
     </main>
